tests/lean/protected_test.lean.expected.out
protected_test.lean:2:9: error: unknown identifier 'induction_on'
protected_test.lean:3:9: error: unknown identifier 'rec_on'
protected_test.lean:5:11: error: unknown identifier 'rec_on'
