tests/lean/protected_test.lean
namespace nat
  #check induction_on      -- ERROR
  #check rec_on            -- ERROR
  namespace le
    #check rec_on          -- ERROR
  end le
end nat
